--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 
 .miniature-wrapper {
   transform: scale(0.3);
