--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+body {
+  /* font-family: "DM Sans"; */
+  font-optical-sizing: auto;
+}
 
 .miniature-wrapper {
   transform: scale(0.3);
   transform-origin: top left;
   width: 400%;
 }
+
