fixed font stylings, sidebar stylings and standard template styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  /* font-family: "DM Sans"; */
   font-optical-sizing: auto;
 }
 
@@ -13,5 +14,12 @@ body {
   transform: scale(0.3);
   transform-origin: top left;
   width: 400%;
+}
+
+.ant-menu-submenu-selected .ant-menu-submenu-arrow {
+  color: #010309 !important;
+}
+.ant-menu-submenu-arrow {
+  color: #808080 !important;
 }
 
