--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,3 +28,19 @@ body {
   color: #808080 !important;
 }
 
+.ant-table-thead > tr > th {
+  color: #000000;
+  font-family: "Lato" serif;
+}
+
+.ant-table-thead > tr {
+  padding: 20px 24px;
+  background-color: #f5f5f5 !important;
+}
+
+.ant-table-tbody > tr > td {
+  color: #010b18;
+  font-weight: 500;
+  font-family: "Poppins" serif;
+}
+
